--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <span><img src="http://s22.postimg.org/8738mevg1/rocketbevel.png" class="fa"></span>
 
 <div class="fixed-action-btn" id="rocketFloatButtons">
-     <a class="">
+     <a style="height:200px; width:50px;bottom:100px; position:relative">
       <i style="opacity:0" class="large material-icons">mode_edit</i>
     </a>
     <ul>
