--- a/Create.html
+++ b/Create.html
@@ -102,7 +102,7 @@
   <div class="col s12 m6">
 
       <label>Select Date</label>
-     <input type="date" class="datepicker center" style="black-text">
+     <input type="date" class="datepicker center black-text">
 
   </div>
 
