3/21/16 FrontEnd Tabs/Forms Updated
Forms Made:
-Study Space
-Project
-Sport
-Event

--- a/Join.html
+++ b/Join.html
@@ -39,7 +39,7 @@
       <p>First Select a Space</p>
       <p><u>Study Space:</u> Filter by class and teacher. Study with your classmates. Maximum of 6 per group.<br>
       <u>Project Space:</u> Filter by field of interest<br>
-      <u>Sports Space:</u> Filter by sport <br>
+      <u>Sport Space:</u> Filter by sport <br>
       <u>Event Space:</u> Made for school events, organizations, clubs, and greek life.<br>
       <u>Housing Space:</u> Filter by location, price, bedrooms
       <br>
@@ -47,7 +47,7 @@
       <u>Textbook Space:</u> filter by class and price<br>
       <u>Carpool Space:</u> Filter by location, date, and time<br>
       <u>Crew Space:</u> Made for dancers. Find crews and compete!<br>
-      <u>Lost in Space:</u> Find items you've lost! Filter by item<br>
+      <u>Lost in Space:</u> Find items you've lost. Filter by item<br>
       </p>
      </div>
     <div class="modal-footer">
