--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
     </div>
 
            <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4 center" style="padding:150px"><h2>Class 1</h2><i class="material-icons right">more_vert</i></span>
+      <span class="card-title activator grey-text text-darken-4 center" style="padding:150px"><h2>Title 1</h2><i class="material-icons right">more_vert</i></span>
 
       <p class="black-text" style="font-size: 16px; cursor:default">
       <i class="material-icons">perm_identity</i>
@@ -124,41 +124,43 @@
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4">Your Group<i class="material-icons right">close</i></span>
-    
+
+      <div class="row">
+          <div class="col s12 black-text">
+           Pictures
+          </div>
+          <img src="">
+        </div>
+
+    <div class="row">
+          <div class="input-field col s12">
+            <textarea id="textarea1" class="materialize-textarea black-text" length="1000"></textarea>
+            <label for="textarea1">In-Group Description</label>
+          </div>
+        </div>
 
        <ul class="collection black-text">
     <li class="collection-item avatar">
       <i class="material-icons circle blue">perm_identity</i>
       <span class="title">Merick Markoem</span>
-      <p>Computer Science<br>
-           <div class="chip">Basketball</div>
-           <div class="chip">Coding</div>
-           <div class="chip">Altruism</div>
-           <div class="chip">Student Space</div>
-      </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <p>Computer Science</p>
+      <p>merick@ucsd.edu</p>
+
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle amber">perm_identity</i>
       <span class="title">Prabhav Khandelwal</span>
-      <p>Computer Science<br>
-          <div class="chip">Basketball</div>
-           <div class="chip">Coding</div>
-           <div class="chip">Altruism</div>
-           <div class="chip">Student Space</div>
-      </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <p>Computer Science</p>
+      <p>merick@ucsd.edu</p>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle green">perm_identity</i>
       <span class="title">Jesse Qin</span>
-      <p>Computer Science<br>
-          <div class="chip">Basketball</div>
-           <div class="chip">Coding</div>
-           <div class="chip">Altruism</div>
-           <div class="chip">Student Space</div>
-      </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <p>Computer Science</p>
+      <p>merick@ucsd.edu</p>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle red">perm_identity</i>
@@ -169,20 +171,19 @@
            <div class="chip">Altruism</div>
            <div class="chip">Student Space</div>
       </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
         <li class="collection-item avatar">
       <i class="material-icons circle purple">perm_identity</i>
       <span class="title">Max Topolsky</span>
-      <p>Economy<br>
-         <div class="chip">Basketball</div>
-           <div class="chip">Coding</div>
-           <div class="chip">Altruism</div>
-           <div class="chip">Student Space</div>
-      </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <p>Computer Science</p>
+      <p>merick@ucsd.edu</p>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
   </ul>
+
+<a class="waves-effect waves-light red btn center">Leave this Space</a>
+
     </div>
        </div>
         </div>
@@ -229,7 +230,7 @@
            <div class="chip">Altruism</div>
            <div class="chip">Student Space</div>
       </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle amber">perm_identity</i>
@@ -240,7 +241,7 @@
            <div class="chip">Altruism</div>
            <div class="chip">Student Space</div>
       </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle green">perm_identity</i>
@@ -251,7 +252,7 @@
            <div class="chip">Altruism</div>
            <div class="chip">Student Space</div>
       </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
   </ul>
     </div>
@@ -300,7 +301,7 @@
            <div class="chip">Altruism</div>
            <div class="chip">Student Space</div>
       </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle amber">perm_identity</i>
@@ -311,7 +312,7 @@
            <div class="chip">Altruism</div>
            <div class="chip">Student Space</div>
       </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle green">perm_identity</i>
@@ -322,7 +323,7 @@
            <div class="chip">Altruism</div>
            <div class="chip">Student Space</div>
       </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle red">perm_identity</i>
@@ -333,7 +334,7 @@
            <div class="chip">Altruism</div>
            <div class="chip">Student Space</div>
       </p>
-      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a personal message"><i class="material-icons">send</i></a>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
     </li>
   </ul>
     </div>
