3/22/16 Added Private Space Form and Logo on SideNav

--- a/Profile.html
+++ b/Profile.html
@@ -40,8 +40,12 @@
     <ul id="slide-out" class="side-nav white">
            
     <!-- SideNav Buttons   -->
+  <div class="spacer"></div>  
+
+ <a href="home.html" class="center" style="height:100px"><img height="100" width="100" src="font/material-design-icons/rocket.png"></a>
+
+  <div class="spacer"></div>  
  <div class="spacer"></div>  
- <div class="spacer"></div> 
 
 <a href="Profile.html" class="waves-effect blue white-text  waves-light btn"><i class="white-text material-icons left"><i class="material-icons">person_pin</i></i>Your Profile</a>
     
