--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href='https://fonts.googleapis.com/css?family=Orbitron:400,500,900,700' rel='stylesheet' type='text/css'>
+  
 </head>
     
 <body>
@@ -53,7 +54,11 @@
     <ul id="slide-out" class="side-nav white">
            
     <!-- SideNav Buttons   -->
- <div class="spacer"></div>  
+  <div class="spacer"></div>  
+
+ <a href="home.html" class="center" style="height:100px"><img height="100" width="100" src="font/material-design-icons/rocket.png"></a>
+
+  <div class="spacer"></div>  
  <div class="spacer"></div> 
 
 <a href="Profile.html" class="waves-effect blue white-text  waves-light btn"><i class="white-text material-icons left"><i class="material-icons">person_pin</i></i>Your Profile</a>
