--- a/space-webapp/src/main/webapp/Create.html
+++ b/space-webapp/src/main/webapp/Create.html
@@ -48,7 +48,7 @@
 
       </ul>
  <!-- Space Logo  -->  
-      <a href="home.html" class="brand-logo center white-text"><img height="100" width="100" src="font/material-design-icons/Paddedlogo.png"></a>
+      <a href="home.html" class="brand-logo center white-text"><img height="100" width="100" src="font/material-design-icons/PaddedLogo.png"></a>
 
 
   
@@ -255,64 +255,65 @@
     
 
 
+
 <div id="projectSpaceForm" class="col s12" style="padding-top:25px">
-    <div class="container">
-        <div class="row">
+    <form action="webapi/create-project-space" method="post">
+        <div class="container">
+            <div class="row">
 
-      <div class="input-field col s12 m6">
-           <input class="validate center black-text" placeholder="Title">
-      </div>
+                <div class="input-field col s12 m6">
+                    <input name="title" class="validate center black-text" placeholder="Title">
+                </div>
 
-      <div class="input-field col s12 m6 black-text">
-        <select class="icons">
-            <option value="" disabled selected>Select a Field</option>
-            <option value="" class="center">Biology</option>
-            <option value="" >Enviornmental Engineering</option>
-            <option value="">Electrical Engineering</option>
-            <option value="">Structural Engineering</option>
-            <option value="" >Mechanical/Aerospace Engineering</option>
-            <option value="" >Computer Science Project</option>
-            <option value="" >Design Project</option>
-            <option value="" >Other</option>
-        </select>
-      </div>
+                <div class="input-field col s12 m6 black-text">
+                    <select name ="field" class="icons">
+                        <option value="" disabled selected>Select a Field</option>
+                        <option value="" class="center">Biology</option>
+                        <option value="" >Enviornmental Engineering</option>
+                        <option value="">Electrical Engineering</option>
+                        <option value="">Structural Engineering</option>
+                        <option value="" >Mechanical/Aerospace Engineering</option>
+                        <option value="" >Computer Science Project</option>
+                        <option value="" >Design Project</option>
+                        <option value="" >Other</option>
+                    </select>
+                </div>
 
-      <div class="col s12 m6">
-      <form action="#">
-        <div class="file-field input-field">
-         <div class="btn blue">
-           <span>Upload Pics</span>
-            <input type="file" multiple>
-         </div>
-              <div class="file-path-wrapper">
-                <input class="file-path validate" type="text" placeholder="Optional">
+                <div class="col s12 m6">
+                    <div class="file-field input-field">
+                        <div class="btn blue">
+                            <span>Upload Pics</span>
+                            <input name="images" type="file" multiple>
+                        </div>
+                        
+                        <div class="file-path-wrapper">
+                            <input class="file-path validate" type="text" placeholder="Optional">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="input-field col s12 m6">
+                    <input name="location" lass="validate center black-text" placeholder="Location">
+                </div>
+
+                <div class="input-field col s12 m6">
+                    <input name="public-description" class="validate center black-text" placeholder="Public Description">
+                </div>
+
+                <div class="input-field col s12 m6">
+                    <input name="group-description" class="validate center black-text" placeholder="In-Group Description">
+                </div>
+
+                <div class="row" style="margin-top:30px"> <div style="padding:60px" class="col s12 m12 center">
+                        <button class="btn waves-effect waves-light black waves-light" type="submit" name="action">Submit
+                        <i class="material-icons right">send</i>
+                        </button> </div>
+                </div>
+
             </div>
         </div>
-      </form>
-      </div>
-
-       <div class="input-field col s12 m6">
-          <input class="validate center black-text" placeholder="Location">
-      </div>
-
-      <div class="input-field col s12 m6">
-           <input class="validate center black-text" placeholder="Public Description">
-      </div>
-
-      <div class="input-field col s12 m6">
-           <input class="validate center black-text" placeholder="In-Group Description">
-      </div>
-
-      <div class="row" style="margin-top:30px"> <div style="padding:60px" class="col s12 m12 center">
-            <button class="btn waves-effect waves-light black waves-light" type="submit" name="action">Submit
-               <i class="material-icons right">send</i>
-            </button> </div>
-        </div>
-
-        </div>
-    </div>
+    </form>
 </div>
-
 
 
 <div id="sportSpaceForm" class="col s12" style="padding-top:25px">
