Front end added expanded space page.

--- a/space-webapp/src/main/webapp/index.html
+++ b/space-webapp/src/main/webapp/index.html
@@ -100,7 +100,7 @@
 
 <div class="spacer"></div>
 
-<a style="font-size:1.5em; width:100%" href="Settings.html" class="waves-effect waves-light blue-grey darken-4 white-text" data-position="bottom" data-delay="50" data-tooltip="Settings"><i class="material-icons left white-text">settings</i><strong>Settings</strong></a>
+<a style="font-size:1.5em; width:100%" href="Settings.html" class="waves-effect waves-light blue-grey darken-4 white-text"><i class="material-icons left white-text">settings</i><strong>Settings</strong></a>
   
 
     </ul>
