Terms of Service Page Updated Style

--- a/space-webapp/src/main/webapp/index.html
+++ b/space-webapp/src/main/webapp/index.html
@@ -27,7 +27,7 @@
    <ul id="nav-mobile" class="right">
 
 <!-- Menu Button -->  
- <li class="right"><a href="#" data-activates="slide-out" class="button-collapse show-on-large blue-grey lighten-5" style="border-radius:1000px"><i class=" blue-grey-text material-icons">more_horiz</i></a></li>
+ <li class="right"><a href="#" data-activates="slide-out" class="button-collapse show-on-large blue-grey lighten-5" style="border-radius:1000px"><img height="70px" width="70px" src="font/material-design-icons/ufoBlack.png"></a></li>
 
 
 
