--- a/space-webapp/src/main/Agreement Page/index.html
+++ b/space-webapp/src/main/Agreement Page/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><span style="font-size:1.5rem">Student</span>Space</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class=" center brand-logo"><span style="font-size:1.5rem">Student</span>Space</a>
     </div>
   </nav>
 
@@ -48,7 +48,7 @@
         <br>
         <h5 class="header col s12 light">Safety and Compliance</h5>
         <p>We do our best to keep Student Space safe, but we cannot guarantee it. We need your help to keep Student Space safe, which includes the following commitments by you:</p>
-        <ul>
+        <ul class="left">
 1) You will not post unauthorized commercial communications (such as spam) on Student Space.<br><br>
 2) You will not collect users' content or information, or otherwise access Student Space, using automated means (such as harvesting bots, robots, spiders, or scrapers).<br><br>
 3) You will not engage in unlawful multi-level marketing, such as a pyramid scheme, on Student Space.<br><br>
