Google Sign In Button

--- a/space-webapp/src/main/webapp/agreement.html
+++ b/space-webapp/src/main/webapp/agreement.html
@@ -64,7 +64,7 @@
         </ul>
       </div>
       <div class="row center">
-        <a href="" id="download-button" class="btn-large waves-effect waves-light blue">I Agree</a>
+        <a href="login.html" id="download-button" class="btn-large waves-effect waves-light blue">I Agree</a>
          <a href="" class="btn-large waves-effect waves-light red">I Decline</a>
       </div>
       <br><br>
