--- a/space-webapp/src/main/webapp/index.html
+++ b/space-webapp/src/main/webapp/index.html
@@ -2,11 +2,84 @@
 <html class="full" lang="en">
 <head>
 
+ <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+ <!-- Google Login -->
+  <script src="https://apis.google.com/js/api:client.js"></script>
+
+    <script>
+  var googleUser = {};
+  var startApp = function() {
+    gapi.load('auth2', function(){
+      // Retrieve the singleton for the GoogleAuth library and set up the client.
+      auth2 = gapi.auth2.init({
+        client_id: '261275448934-lr9a73fcmfvm8ha6dur37vg74g9megb8.apps.googleusercontent.com
+',
+        cookiepolicy: 'single_host_origin',
+        // Request scopes in addition to 'profile' and 'email'
+        //scope: 'additional_scope'
+      });
+      attachSignin(document.getElementById('customBtn'));
+    });
+  };
+
+  function attachSignin(element) {
+    console.log(element.id);
+    auth2.attachClickHandler(element, {},
+        function(googleUser) {
+          document.getElementById('name').innerText = "Signed in: " +
+              googleUser.getBasicProfile().getName();
+        }, function(error) {
+          alert(JSON.stringify(error, undefined, 2));
+        });
+  }
+  </script>
+
+  <style type="text/css">
+    #customBtn {
+      display: inline-block;
+      background: white;
+      color: #444;
+      width: 190px;
+      border-radius: 5px;
+      border: thin solid #888;
+      box-shadow: 1px 1px 1px grey;
+      white-space: nowrap;
+    }
+    #customBtn:hover {
+      cursor: pointer;
+    }
+    span.label {
+      font-family: serif;
+      font-weight: normal;
+    }
+    span.icon {
+      background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
+      display: inline-block;
+      vertical-align: middle;
+      width: 42px;
+      height: 42px;
+    }
+    span.buttonText {
+      display: inline-block;
+      vertical-align: middle;
+      padding-left: 42px;
+      padding-right: 42px;
+      font-size: 14px;
+      font-weight: bold;
+      /* Use the Roboto font that is loaded in the <head> */
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
+
+    <script>startApp();</script>
+
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+      <meta name="google-signin-client_id" content="261275448934-lr9a73fcmfvm8ha6dur37vg74g9megb8.apps.googleusercontent.com">
 
     <title>SUCSD</title>
 <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
@@ -89,27 +162,18 @@
  </span>
  <br>
  <span  style="font-size:1em;" class="intro-text">The Student Network</span>
-<!-- Rocket Floating Button -->
-<div id="wrapper">
-  <span><img src="http://s22.postimg.org/8738mevg1/rocketbevel.png" class="fa"></span>
 
-<div class="centerBlock">
-<div class="fixed-action-btn" id="rocketFloatButtons">
-     <a style="height:200px; width:50px;bottom:100px; position:relative">
-      <i style="opacity:0" class="large material-icons">mode_edit</i>
-    </a>
-    
-                    
-  </div>
-
-  </div>
-  </div>
 
 <!-- End Rocket Floating Button -->
 
-<div class="centerBlock" style="padding-top:200px; font-family:Righteous">
-  <button href="" type="button" class="btn3d btn btn-white btn-lg"><span></span>Google Login</button>
+ <div id="gSignInWrapper">
+    <span class="label">Sign in with:</span>
+    <div id="customBtn" class="customGPlusSignIn">
+      <span class="icon"></span>
+      <span class="buttonText">Google</span>
+    </div>
   </div>
+  <div id="name"></div>
 
 
 
@@ -118,8 +182,12 @@
   
    <h1 class="textShadow">Mission</h1> <br>
                         <p class="intro-text">Student Space is the exclusive social/educational network for UCSD students. A matrix of functions specifically tailored to connect the student body. Student Space enhances every aspect of your college experience and is free to use.</p>
+
+
   
   </div>
+
+
 </div>
 
 
@@ -132,9 +200,9 @@
  <!-- Flickity JavaScript -->
    
    <script type="text/javascript" src="js/flickity.min.js"></script>
-   
-   
-      <!-- jQuery -->
+ 
+ 
+  <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 </html>
