--- a/space-webapp/src/main/webapp/index.html
+++ b/space-webapp/src/main/webapp/index.html
@@ -4,16 +4,40 @@
 
  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
  <!-- Google Login -->
-  <script src="https://apis.google.com/js/api:client.js"></script>
+ 
 
-    <script>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+   
+
+    <title>SUCSD</title>
+<link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
+
+ <!-- Style CSS -->
+ <link href="css/styleLanding.css" rel="stylesheet">
+ 
+  <!-- Flickity CSS -->
+<link rel="stylesheet" type="text/css" href="css/flickity.css">
+ 
+ <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+ <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+ 
+ <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+  <script src="https://apis.google.com/js/api:client.js"></script>
+  <script>
   var googleUser = {};
   var startApp = function() {
     gapi.load('auth2', function(){
       // Retrieve the singleton for the GoogleAuth library and set up the client.
       auth2 = gapi.auth2.init({
-        client_id: '261275448934-lr9a73fcmfvm8ha6dur37vg74g9megb8.apps.googleusercontent.com
-',
+        client_id: '261275448934-lr9a73fcmfvm8ha6dur37vg74g9megb8.apps.googleusercontent.com',
         cookiepolicy: 'single_host_origin',
         // Request scopes in addition to 'profile' and 'email'
         //scope: 'additional_scope'
@@ -34,68 +58,7 @@
   }
   </script>
 
-  <style type="text/css">
-    #customBtn {
-      display: inline-block;
-      background: white;
-      color: #444;
-      width: 190px;
-      border-radius: 5px;
-      border: thin solid #888;
-      box-shadow: 1px 1px 1px grey;
-      white-space: nowrap;
-    }
-    #customBtn:hover {
-      cursor: pointer;
-    }
-    span.label {
-      font-family: serif;
-      font-weight: normal;
-    }
-    span.icon {
-      background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
-      display: inline-block;
-      vertical-align: middle;
-      width: 42px;
-      height: 42px;
-    }
-    span.buttonText {
-      display: inline-block;
-      vertical-align: middle;
-      padding-left: 42px;
-      padding-right: 42px;
-      font-size: 14px;
-      font-weight: bold;
-      /* Use the Roboto font that is loaded in the <head> */
-      font-family: 'Roboto', sans-serif;
-    }
-  </style>
 
-    <script>startApp();</script>
-
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-      <meta name="google-signin-client_id" content="261275448934-lr9a73fcmfvm8ha6dur37vg74g9megb8.apps.googleusercontent.com">
-
-    <title>SUCSD</title>
-<link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
-
- <!-- Style CSS -->
- <link href="css/styleLanding.css" rel="stylesheet">
- 
-  <!-- Flickity CSS -->
-<link rel="stylesheet" type="text/css" href="css/flickity.css">
- 
- <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
- <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
- 
  </head>
  
 <body>
@@ -162,23 +125,20 @@
  </span>
  <br>
  <span  style="font-size:1em;" class="intro-text">The Student Network</span>
+<div>
+<br>
+ <button type="button" id="customBtn"class="btn btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> Primary</button>
 
 
-<!-- End Rocket Floating Button -->
-
- <div id="gSignInWrapper">
-    <span class="label">Sign in with:</span>
-    <div id="customBtn" class="customGPlusSignIn">
-      <span class="icon"></span>
-      <span class="buttonText">Google</span>
-    </div>
-  </div>
   <div id="name"></div>
+  <script>startApp();</script>
+</div>
 
 
+   </div>
 
-  </div>
-  <div class="gallery-cell">
+  
+   <div class="gallery-cell">
   
    <h1 class="textShadow">Mission</h1> <br>
                         <p class="intro-text">Student Space is the exclusive social/educational network for UCSD students. A matrix of functions specifically tailored to connect the student body. Student Space enhances every aspect of your college experience and is free to use.</p>
@@ -186,6 +146,7 @@
 
   
   </div>
+
 
 
 </div>
