--- a/space-webapp/src/main/webapp/index.html
+++ b/space-webapp/src/main/webapp/index.html
@@ -43,6 +43,10 @@
         //scope: 'additional_scope'
       });
       attachSignin(document.getElementById('customBtn'));
+      if(googleUser.isSignedIn()){
+         location.href = "login.html"
+      }
+     
     });
   };
 
@@ -127,7 +131,15 @@
  <span  style="font-size:1em;" class="intro-text">The Student Network</span>
 <div>
 <br>
- <button type="button" id="customBtn"class="btn btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> Primary</button>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+ <button type="button" id="customBtn"class="btn btn-default btn-lg btn3d"><span style="font-family:Roboto"><img src="font/material-design-icons/googleLogo.png" height="35px" width="35px" style="padding-right:10px; padding-bottom:10px; margin-top:5px"></span>Google Sign-In</button>
 
 
   <div id="name"></div>
