--- a/space-webapp/src/main/webapp/spaceExpanded.html
+++ b/space-webapp/src/main/webapp/spaceExpanded.html
@@ -110,13 +110,8 @@
 <!-- Menu Button -->  
 
 
- <li ><a href="#" data-activates="slide-out" class="button-collapse show-on-large blue-grey lighten-5" style="border-radius:1000px"><div class="container">
-  <div class="planet2"></div>
-    <div class="orbit">
-    <div class="moon"></div>
-  </div>
-</div></a></li>
 
+ <li><a href="#" data-activates="slide-out" class="button-collapse show-on-large blue-grey lighten-5 grey-text" style="border-radius:1000px"><i class="material-icons grey-text">more_horiz</i></a></li>
 
 </ul>
    
