Updates to frontend (by Gabe)

--- a/space-webapp/src/main/webapp/agreement.html
+++ b/space-webapp/src/main/webapp/agreement.html
@@ -24,8 +24,9 @@
 </head>
 <body>
 
-  <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class=" center brand-logo"><span style="font-size:1.5rem">Student</span>Space</a>
+  <nav class="blue-grey lighten-5 navigation z-depth-0"
+   role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class=" center brand-logo"><span style="font-size:1.5rem;" >Student</span>Space</a>
     </div>
   </nav>
 
@@ -49,7 +50,7 @@
         </ul>
         <br>
         <h5 class="header col s12 light">Privacy</h5>
-        <p>You the student, are required to accept Student Space's Terms of Service to access and use the Student Space application. Acceptance of the Terms of Service permits Student Space to import your name, email address, and class schedule for use in the Student Space application. The student at any time has full control of his/her private information (name, email address, and class schedule) and may opt out of the Student Space Terms of Service at any time.</p>
+        <p>You the student, are required to accept Student Space's Terms of Service to access and use the Student Space application. Acceptance of the Terms of Service permits Student Space to import your name, email address, and class schedule for use in the Student Space application. The student has full control of his/her private information (name, email address, and class schedule) and may opt-out of the Student Space Terms of Service at any time.</p>
         <br>
         <h5 class="header col s12 light">How We Use Your Information</h5>
         <p>We use your name, email address, and class schedule data to help you connect with your fellow colleagues who are also on the Student Space network.</p>
@@ -82,7 +83,7 @@
       <p class="center">You must agree to the Terms of Service to access Student Space.</p>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Ok!</a>
+      <a href="#!" class="modal-action modal-close waves-effect btn-flat ">Ok!</a>
     </div>
   </div>
 
