--- a/space-webapp/src/main/webapp/index.html
+++ b/space-webapp/src/main/webapp/index.html
@@ -3,8 +3,10 @@
 <head>
 
  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
- <!-- Google Login -->
- 
+
+   <link rel="icon" 
+      type="image/png" 
+      href="font/material-design-icons/rocket.png">
 
 
     <meta charset="utf-8">
