frontend update (by Gabe)

--- a/space-webapp/src/main/webapp/spaceExpanded.html
+++ b/space-webapp/src/main/webapp/spaceExpanded.html
@@ -110,7 +110,6 @@
     </ul>
 
 <ul>
-<!--  <li><a href="#" data-activates="slide-out" class="button-collapse show-on-large blue-grey lighten-5 grey-text" style="border-radius:1000px"><i class="material-icons grey-text">more_horiz</i></a></li> Button -->  
 
 
  <li><a href="#" data-activates="slide-out" class="button-collapse show-on-large" style="border-radius:1000px"><i class="material-icons blue-grey-text">more_horiz</i></a></li>
@@ -123,17 +122,9 @@
 
  <!-- End of Nav Bar   -->
 
-<!-- Tools, Folders, Shortcuts -->
 
-<div class="headerSpace">
-
- <!-- Title of Space -->
-<!--Carousel of people-->
-  
-  
-    <div class="col s12 center">
-
-  <div class="carousel">
+<div class="row">
+ <div class="carousel" >
     <a class="carousel-item tooltipped " data-position="top" data-delay="50" data-tooltip="Greg my niggeh" href="Profile.html"><img style="border-radius:50%" src="font/material-design-icons/greg.png"></a>
 
     <a class="carousel-item tooltipped " data-position="top" data-delay="50" data-tooltip="Sanmitra Ijeri" href="Profile.html tooltipped " data-position="top" data-delay="50" data-tooltip="Greg my niggeh"><img style="border-radius:50%" src="font/material-design-icons/sanmitra.png"></a>
@@ -144,9 +135,64 @@
 
     <a class="carousel-item tooltipped " data-position="top" data-delay="50" data-tooltip="Momo" href="Profile.html"><img style="border-radius:50%" src="font/material-design-icons/momo.png"></a>
   </div>
+  </div>
+ <div class="row">
+    <div class="col s12">
+      <ul class="tabs">
+        <li class="tab col s4"><a href="#infoTab">Info</a></li>
+        <li class="tab col s4"><a class="active" href="#toolsTab">Tools</a></li>
+        <li class="tab col s4"><a href="#photosTab">Photos</a></li>
+      </ul>
+    </div>
+    <div id="infoTab" class="col s12 m6 offset-m3">
+    <br>
+    <h5 class="center">
+          <span class="textShadow">Group Info</span>
+          </h5>
+     <ul class="collection black-text center">
+    <li class="collection-item avatar blue-grey lighten-5">
+      <i class="material-icons circle blue">perm_identity</i>
+      <span class="title">Merick Markoem</span>
+      <p>Computer Science</p>
+      <p>merick@ucsd.edu</p>
 
-  
-<div class="spacer"></div>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
+    </li>
+    <li class="collection-item avatar blue-grey lighten-5">
+      <i class="material-icons circle amber">perm_identity</i>
+      <span class="title">Prabhav Khandelwal</span>
+      <p>Computer Science</p>
+      <p>merick@ucsd.edu</p>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
+    </li>
+    <li class="collection-item avatar blue-grey lighten-5">
+      <i class="material-icons circle green">perm_identity</i>
+      <span class="title">Jesse Qin</span>
+      <p>Computer Science</p>
+      <p>merick@ucsd.edu</p>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
+    </li>
+    <li class="collection-item avatar blue-grey lighten-5">
+      <i class="material-icons circle red">perm_identity</i>
+      <span class="title">Kedar Pujera</span>
+      <p>Computer Science<br>
+           <div class="chip">Basketball</div>
+           <div class="chip">Coding</div>
+           <div class="chip">Altruism</div>
+           <div class="chip">Student Space</div>
+      </p>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
+    </li>
+        <li class="collection-item avatar blue-grey lighten-5">
+      <i class="material-icons circle purple">perm_identity</i>
+      <span class="title">Max Topolsky</span>
+      <p>Computer Science</p>
+      <p>merick@ucsd.edu</p>
+      <a href="#!" class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="Send a Hangouts message"><i class="material-icons">send</i></a>
+    </li>
+  </ul>
+  </div>
+    <div id="toolsTab" class="col s12">  
   <div class="row">
     <div class="col s12 center">
 
@@ -167,6 +213,30 @@
 </div> 
 </div>
     </div>
+</div>
+    <div id="photosTab" class="col s12 m6 offset-m3"> 
+   
+    <br>
+    <h5 class="center">
+          <span class="textShadow">Photos</span>
+          </h5>
+    <img class="materialboxed center" data-caption="A picture of some deer and tons of trees" width="250" src="http://th01.deviantart.net/fs70/PRE/i/2013/126/1/e/nature_portrait_by_pw_fotografie-d63tx0n.jpg">
+   
+  </div>
+
+  </div>
+        
+ <!-- Title of Space -->
+
+<!--Carousel of people-->
+  
+  
+    <div class="col s12 center">
+
+
+  
+<div class="spacer"></div>
+
 
 
 
@@ -250,6 +320,7 @@
 </div>
       
 <!-- Header Space -->
+  </div>
   </div>
 
 
