--- a/space-webapp/src/main/webapp/userInput.html
+++ b/space-webapp/src/main/webapp/userInput.html
@@ -146,7 +146,7 @@
   <option>Bioengineering (Pre-Medical) (B.S.)*</option>
   <option disabled slected>Biological Sciences</option>
   <option>Biochemistry and Cell Biology (B.S.)</option>
-  <option>Biology with Speciaoptionzation in Bioinformatics (B.S.)</option>
+  <option>Biology with Specialization in Bioinformatics (B.S.)</option>
   <option>Ecology, Behavior and Evolution (B.S.)</option>
   <option>General Biology (B.S.)</option>
   <option>Human Biology (B.S.)</option>
@@ -159,7 +159,7 @@
   <option>Chemical Education (B.S.)</option>
   <option>Chemical Physics (B.S.)</option>
   <option>Chemistry (B.S.)</option>
-  <option>Chemistry with a Speciaoptionzation in Earth Sciences (B.S.)</option>
+  <option>Chemistry with a Specialization in Earth Sciences (B.S.)</option>
   <option>Environmental Chemistry (B.S.)</option>
   <option>Molecular Synthesis (B.S.)</option>
   <option>Pharmacological Chemistry (B.S.)</option>
@@ -168,18 +168,18 @@
   <option disabled slected>Classical Studies</option>
   <option>Classical Studies (B.A.)</option>
   <option>Cognitive Science (B.A./B.S.)</option>
-  <option>Cognitive Science with Speciaoptionzation in Coptionnical Aspects of Cognition (B.S.)</option>
-  <option>Cognitive Science with Speciaoptionzation in Computation (B.S.)</option>
-  <option>Cognitive Science with Speciaoptionzation in Human Cognition (B.S.)</option>
-  <option>Cognitive Science with Speciaoptionzation in Human Computer Interaction (B.S.)</option>
-  <option>Cognitive Science with Speciaoptionzation in Neuroscience (B.S.)</option>
+  <option>Cognitive Science with Specialization  in Clinical Aspects of Cognition (B.S.)</option>
+  <option>Cognitive Science with Specialization  in Computation (B.S.)</option>
+  <option>Cognitive Science with Specialization  in Human Cognition (B.S.)</option>
+  <option>Cognitive Science with Specialization  in Human Computer Interaction (B.S.)</option>
+  <option>Cognitive Science with Specialization  in Neuroscience (B.S.)</option>
   <option>Cognitive and Behavioral Neuroscience (B.S.)</option>
   <option>Communication</option>
   <option>Communication (B.A.)</option>
   <option>Computer Science and Engineering (CSE)</option>
   <option>Computer Engineering (B.S.)*</option>
   <option>Computer Science (B.A./B.S.)*</option>
-  <option>Computer Science with Speciaoptionzation in Bioinformatics (B.S)*</option>
+  <option>Computer Science with Specialization  in Bioinformatics (B.S)*</option>
   <option disabled slected>Critical Gender Studies</option>
   <option>Critical Gender Studies (B.A.)</option>
   <option disabled slected>Economics</option>
@@ -195,11 +195,11 @@
   <option>Environmental Systems (Earth Sciences) (B.S.)</option>
   <option>Environmental Systems (Ecology, Behavior, & Evolution) (B.S.)</option>
   <option>Environmental Systems (Environmental Chemistry) (B.S.)</option>
-  <option>Environmental Systems (Environmental Pooptioncy) (B.A.)</option>
+  <option>Environmental Systems (Environmental Policy) (B.A.)</option>
   <option disabled slected>Ethnic Studies</option>
   <option>Ethnic Studies (B.A.)</option>
   <option disabled slected>Family and Preventive Medicine</option>
-  <option>Puboptionc Health (B.S.)</option>
+  <option>Public Health (B.S.)</option>
   <option disabled slected>German Studies</option>
   <option>German Studies (B.A.)</option>
   <option disabled slected>Global Health</option>
@@ -215,12 +215,12 @@
   <option>International Studies - Economics (Jt BA/MIA)*</option>
   <option>International Studies - History</option>
   <option>International Studies - International Business</option>
-  <option>International Studies - optionnguistics</option>
-  <option>International Studies - optionterature</option>
-  <option>International Studies - Pooptiontical Science</option>
-  <option>International Studies - Pooptiontical Science (Jt BA/MIA)*</option>
+  <option>International Studies - Linguistics</option>
+  <option>International Studies - Literature</option>
+  <option>International Studies - Political Science</option>
+  <option>International Studies - Political Science (Jt BA/MIA)*</option>
   <option>International Studies - Sociology</option>
-  <option disabled slected>Itaoptionan Studies</option>
+  <option disabled slected>Italian Studies</option>
   <option>Itaoptionan Studies (B.A.)</option>
   <option disabled slected>Japanese Studies</option>
   <option>Japanese Studies (B.A.)</option>
@@ -229,24 +229,24 @@
   <option>Judaic Studies (B.A.)</option>
   <option disabled slected>Latin American Studies</option>
   <option>Latin American Studies (B.A.)</option>
-  <option>optionnguistics</option>
-  <option>optionnguistics (B.A.)</option>
-  <option>optionnguistics (Speciaoptionzation in Cognition and Language) (B.A.)</option>
-  <option>optionnguistics (Speciaoptionzation in Language and Society) (B.A.)</option>
-  <option>optionnguistics: Language Studies (Speciaoptionzation in Individual Language) (B.A.)</option>
-  <option disabled slected>optionterature</option>
-  <option>optionteratures in Engoptionsh (B.A.)</option>
-  <option>optionteratures in French (B.A.)</option>
-  <option>optionteratures in German (B.A.)</option>
-  <option>optionteratures in Itaoptionan (B.A.)</option>
-  <option>optionteratures in Russian (B.A.)</option>
-  <option>optionteratures in Spanish</option>
-  <option>   - Spanish optionterature (B.A.)</option>
-  <option>   - U.S. Latino/a and Latin American optionteratures (B.A.)</option>
-  <option>optionterature/Composite Major (B.A.)</option>
-  <option>optionterature/Cultural Studies (B.A.)</option>
-  <option>optionterature/Writing (B.A.)*</option>
-  <option>optionteratures of the World (B.A.)</option>
+  <option>Linguistics</option>
+  <option>Linguistics (B.A.)</option>
+  <option>Linguistics (Specialization  in Cognition and Language) (B.A.)</option>
+  <option>Linguistics (Specialization  in Language and Society) (B.A.)</option>
+  <option>Linguistics: Language Studies (Specialization  in Individual Language) (B.A.)</option>
+  <option disabled slected>Literature</option>
+  <option>Literatures in Engoptionsh (B.A.)</option>
+  <option>Literatures in French (B.A.)</option>
+  <option>Literatures in German (B.A.)</option>
+  <option>Literatures in Itaoptionan (B.A.)</option>
+  <option>Literatures in Russian (B.A.)</option>
+  <option>Literatures in Spanish</option>
+  <option>   - Spanish Literature (B.A.)</option>
+  <option>   - U.S. Latino/a and Latin American Literatures (B.A.)</option>
+  <option>Literature/Composite Major (B.A.)</option>
+  <option>Literature/Cultural Studies (B.A.)</option>
+  <option>Literature/Writing (B.A.)*</option>
+  <option>Literatures of the World (B.A.)</option>
   <option disabled slected>Mathematics</option>
   <option>Mathematics (Appoptioned) (B.S.)</option>
   <option>Mathematics (B.S.)</option>
@@ -256,7 +256,7 @@
   <option>Mathematics - Secondary Education (B.A.)</option>
   <option>Mathematics - Scientific Computation (B.S.)</option>
   <option>Probabioptionty and Statistics (B.S.)</option>
-  <option disabled slected>Mechanical and Aerospace Engineering (MAE)</option>
+  <option disabled slected >Mechanical and Aerospace Engineering (MAE)</option>
   <option>Aerospace Engineering (B.S.)*</option>
   <option>Environmental Engineering (B.S.)*</option>
   <option>Mechanical Engineering (B.S.)*</option>
@@ -273,30 +273,30 @@
   <option>General Physics (B.A.)</option>
   <option>General Physics/ Secondary Education (B.A.)</option>
   <option>Physics (B.S.)</option>
-  <option>Physics with Speciaoptionzation in Astrophysics (B.S.)</option>
+  <option>Physics with Specialization  in Astrophysics (B.S.)</option>
   <option>Physics - Biophysics (B.S.)</option>
-  <option>Physics with Speciaoptionzation in Computational Physics (B.S.)</option>
-  <option>Physics with Speciaoptionzation in Earth Sciences (B.S.)</option>
-  <option>Physics with Speciaoptionzation in Materials Physics (B.S.)</option>
-  <option disabled slected>Pooptiontical Science</option>
-  <option>Pooptiontical Science (B.A.)</option>
-  <option>Pooptiontical Science (American Pooptiontics) (B.A.)</option>
-  <option>Pooptiontical Science (Comparative Pooptiontics) (B.A.)</option>
-  <option>Pooptiontical Science (International Relations) (B.A.)</option>
-  <option>Pooptiontical Science (Pooptiontical Theory) (B.A.)</option>
-  <option>Pooptiontical Science (Puboptionc Law) (B.A.)</option>
-  <option>Pooptiontical Science (Puboptionc Pooptioncy) (B.A.)</option>
+  <option>Physics with Specialization  in Computational Physics (B.S.)</option>
+  <option>Physics with Specialization  in Earth Sciences (B.S.)</option>
+  <option>Physics with Specialization  in Materials Physics (B.S.)</option>
+  <option disabled slected>Political Science</option>
+  <option>Political Science (B.A.)</option>
+  <option>Political Science (American Pooptiontics) (B.A.)</option>
+  <option>Political Science (Comparative Pooptiontics) (B.A.)</option>
+  <option>Political Science (International Relations) (B.A.)</option>
+  <option>Political Science (Political Theory) (B.A.)</option>
+  <option>Political Science (Public Law) (B.A.)</option>
+  <option>Political Science (Public Policy) (B.A.)</option>
   <option disabled slected>Psychology</option>
   <option>Psychology (B.A./B.S.)</option>
-  <option>Psychology with a Speciaoptionzation in Coptionnical Psychology (B.S.)</option>
-  <option>Psychology with a Speciaoptionzation in Cognitive Psychology (B.S.)</option>
-  <option>Psychology with a Speciaoptionzation in Developmental Psychology (B.S.)</option>
-  <option>Psychology with a Speciaoptionzation in Human Health (B.S.)</option>
-  <option>Psychology with a Speciaoptionzation in Sensation and Perception (B.S.)</option>
-  <option>Psychology with a Speciaoptionzation in Social Psychology (B.S.)</option>
+  <option>Psychology with a Specialization  in Clinical Psychology (B.S.)</option>
+  <option>Psychology with a Specialization  in Cognitive Psychology (B.S.)</option>
+  <option>Psychology with a Specialization  in Developmental Psychology (B.S.)</option>
+  <option>Psychology with a Specialization  in Human Health (B.S.)</option>
+  <option>Psychology with a Specialization  in Sensation and Perception (B.S.)</option>
+  <option>Psychology with a Specialization  in Social Psychology (B.S.)</option>
   <option>Cognitive and Behavioral Neuroscience (B.S.)</option>
-  <option disabled slected>Reoptiongion</option>
-  <option>Study of Reoptiongion (B.A.)</option>
+  <option disabled slected>Religion</option>
+  <option>Study of Religion (B.A.)</option>
   <option></option>
   <option>Russian and Soviet Studies</option>
   <option>Russian, East European & Eurasian Studies (B.A.)</option>
@@ -309,7 +309,7 @@
   <option>Sociology - Science and Medicine (B.A.)</option>
   <option>Sociology - Economy and Society (B.A.)</option>
   <option>Sociology - Culture and Communication (B.A.)</option>
-  <option>Sociology - Social Inequaoptionty (B.A.)</option>
+  <option>Sociology - Social Inequality (B.A.)</option>
   <option>Sociology - Law and Society (B.A.)</option>
   <option disabled slected>Structural Engineering (SE)</option>
   <option>Engineering Sciences (B.S.)*</option>
@@ -326,8 +326,8 @@
   <option>Urban Studies and Planning</option>
   <option>Urban Studies and Planning (B.A.)</option>
   <option disabled slected>Visual Arts</option>
-  <option>Art History/ Criticism (B.A.)</option>
-  <option>Interdiscipoptionnary Computing and the Arts (B.A.)**</option>
+  <option>Art History/Criticism (B.A.)</option>
+  <option>Interdisciplinary Computing and the Arts (B.A.)**</option>
   <option>Media (B.A.)**</option>
   <option>Speculative Design (B.A.)</option>
   <option>Studio (B.A.)**</option>
@@ -335,8 +335,10 @@
   </div>
 
   <div class="input-field col s12 m6">
+  <div style="height:11px"></div>
+          <i class="material-icons prefix">local_library</i>
           <input id="icon_prefix" type="text" class="validate">
-          <label for="icon_prefix">Your Year</label>
+          <label for="icon_prefix">Year of Graduation</label>
   </div>
     
 
@@ -347,7 +349,7 @@
         <input type="file" multiple>
       </div>
       <div class="file-path-wrapper">
-        <input class="file-path validate" type="text" placeholder="Upload one or more images - Optional">
+        <input class="file-path validate" type="text" placeholder="Upload an image of yourself - Optional">
       </div>
     </div>
   </div>
@@ -355,7 +357,7 @@
 
    <div class="input-field col s12">
           <textarea id="textarea1" class="materialize-textarea"></textarea>
-          <label for="textarea1">Description</label>
+          <label for="textarea1">Describe your College Life</label>
         </div>
 
      
