--- a/space-webapp/src/main/webapp/index.html
+++ b/space-webapp/src/main/webapp/index.html
@@ -88,7 +88,7 @@
    <div class="row">
 <div class="col-xs-4 col-sm-4 col-md-4">
  
-<i class="material-icons button" style="font-size:56px">group_work</i>
+<i class="material-icons button" style="font-size:56px">control_point_duplicate</i>
   
 <div class='popup'>
   <div>Create or Join a Space <br> (a group of UCSD students)</div>
@@ -99,7 +99,7 @@
 
 <div class="col-xs-4 col-sm-4 col-md-4">
  
-<i class="material-icons button" style="font-size:56px">web</i>
+<i class="material-icons button" style="font-size:56px">bubble_chart</i>
   
 <div class='popup'>
   <div>Easily organize information <br> with your fellow colleagues</div
@@ -110,7 +110,7 @@
 
 <div class="col-xs-4 col-sm-4 col-md-4">
  
-<i class="material-icons button" style="font-size:56px">message</i>
+<i class="material-icons button" style="font-size:56px">group_work</i>
   
 <div class='popup'>
   <div>Message any UCSD student <br>on the network</div>
@@ -128,7 +128,7 @@
 
   <div class="gallery-cell">
   
-  <span><span class="intro-text" style="font-size:1.2em">STUDENT<span class="intro-text" style="font-size:2.3em; padding:0px">S P A C E</span></span>
+  <span><span class="intro-text" style="font-size:1.2em">STUDENT<span class="intro-text textShadow" style="font-size:2.3em; padding:0px">S P A C E</span></span>
  </span>
  <br>
  <span  style="font-size:1em;" class="intro-text">The Student Network</span>
